# trees_benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarking/: main.cpp  normalDistGenerator.h  testTreeAdapter.cpp  testTreeAdapter.h  treeTestLauncher.h
trees/: CMakeLists.txt  advancedAvlTree.cpp  advancedAvlTree.h  avlTree.cpp  avlTree.h  bTree.cpp  bTree.h  iTree.h  main.cpp  normalDistGenerator.h  splayTreeWrap.cpp  splayTreeWrap.h  stlMap.cpp  stlMap.h  testTreeAdapter.cpp  testTreeAdapter.h  treeTestLauncher.h  vebLayout.cpp  vebLayout.h
trees/splayTree/: splayTree.h
trees/vebFunc/: vanemdeboas.h
